// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-client basic batch mutation 1`] = `"mutation { m0: insert_vcs_Membership_one (object: {vcs_User: {data: {uid: \\"ashnet16\\", source: \\"GitHub\\", origin: \\"myghsrc\\"}, on_conflict: {constraint: {value: \\"vcs_User_pkey\\"}, update_columns: [{value: \\"refreshedAt\\"}]}}, vcs_Organization: {data: {uid: \\"faros-ai\\", source: \\"GitHub\\", origin: \\"myghsrc\\"}, on_conflict: {constraint: {value: \\"vcs_Organization_pkey\\"}, update_columns: [{value: \\"refreshedAt\\"}]}}, origin: \\"myghsrc\\"}, on_conflict: {constraint: {value: \\"vcs_Membership_pkey\\"}, update_columns: [{value: \\"origin\\"}, {value: \\"refreshedAt\\"}]}) { id } m1: insert_vcs_User_one (object: {uid: \\"betafood\\", type: {category: \\"User\\", detail: \\"user\\"}, source: \\"GitHub\\", origin: \\"myghsrc\\"}, on_conflict: {constraint: {value: \\"vcs_User_pkey\\"}, update_columns: [{value: \\"email\\"}, {value: \\"name\\"}, {value: \\"origin\\"}, {value: \\"refreshedAt\\"}, {value: \\"type\\"}, {value: \\"url\\"}]}) { id } }"`;

exports[`graphql-client write batch upsert basic end-to-end 1`] = `"mutation { insert_vcs_Organization (objects: [{uid: \\"faros-ai\\", source: \\"GitHub\\"}], on_conflict: {constraint: vcs_Organization_pkey, update_columns: [source, uid]}) { returning { id source uid } } }"`;

exports[`graphql-client write batch upsert basic end-to-end 2`] = `"mutation { insert_vcs_Repository (objects: [{name: \\"metis\\", organizationId: \\"t1|gql-e2e-v2|GitHub|faros-ai\\"}, {name: \\"hermes\\", organizationId: \\"t1|gql-e2e-v2|GitHub|faros-ai\\"}], on_conflict: {constraint: vcs_Repository_pkey, update_columns: [name, organizationId]}) { returning { id name organizationId } } }"`;

exports[`graphql-client write batch upsert basic end-to-end 3`] = `"mutation { insert_vcs_Branch (objects: [{name: \\"foo\\", origin: \\"mytestsource\\", repositoryId: \\"t1|gql-e2e-v2|metis|t1|gql-e2e-v2|GitHub|faros-ai\\"}, {name: \\"main\\", origin: \\"mytestsource\\", repositoryId: \\"t1|gql-e2e-v2|hermes|t1|gql-e2e-v2|GitHub|faros-ai\\"}], on_conflict: {constraint: vcs_Branch_pkey, update_columns: [origin]}) { returning { id name repositoryId } } }"`;

exports[`graphql-client write batch upsert mergeByPrimaryKey 1`] = `
Array [
  Object {
    "htmlUrl": "https://github.com/tovbinm",
    "name": "tovbinm",
    "origin": "mytestsource2",
    "source": "GitHub",
    "type": Object {
      "category": "User",
      "detail": "user",
    },
    "uid": "tovbinm",
  },
  Object {
    "htmlUrl": "https://github.com/vitalyg",
    "name": "vitalyg",
    "origin": "mytestsource",
    "source": "GitHub",
    "type": Object {
      "foo": "bar",
    },
    "uid": "vitalyg",
  },
]
`;

exports[`graphql-client write batch upsert record with null primary key field 1`] = `"mutation { insert_vcs_Organization (objects: [{uid: \\"faros-ai\\", origin: \\"mytestsource\\"}], on_conflict: {constraint: vcs_Organization_pkey, update_columns: [origin]}) { returning { id source uid } } }"`;

exports[`graphql-client write batch upsert self-referent model 1`] = `"mutation { insert_org_Employee (objects: [{uid: \\"7\\"}, {uid: \\"9\\"}], on_conflict: {constraint: org_Employee_pkey, update_columns: [uid]}) { returning { id uid } } }"`;

exports[`graphql-client write batch upsert self-referent model 2`] = `"mutation { insert_org_Employee (objects: [{uid: \\"9\\", origin: \\"mytestsource\\"}], on_conflict: {constraint: org_Employee_pkey, update_columns: [origin]}) { returning { id uid } } }"`;

exports[`graphql-client write batch upsert self-referent model 3`] = `"mutation { insert_org_Employee (objects: [{uid: \\"10\\", origin: \\"mytestsource\\", managerId: \\"t1|gql-e2e-v2|7\\"}, {uid: \\"8\\", origin: \\"mytestsource\\", managerId: \\"t1|gql-e2e-v2|9\\"}, {uid: \\"7\\", origin: \\"mytestsource\\", managerId: \\"t1|gql-e2e-v2|9\\"}], on_conflict: {constraint: org_Employee_pkey, update_columns: [managerId, origin]}) { returning { id uid } } }"`;

exports[`graphql-client write batch upsert self-referent model 4`] = `"mutation { insert_org_Employee (objects: [{uid: \\"10\\", origin: \\"mytestsource\\", managerId: \\"t1|gql-e2e-v2|7\\"}, {uid: \\"8\\", origin: \\"mytestsource\\", managerId: \\"t1|gql-e2e-v2|9\\"}, {uid: \\"7\\", origin: \\"mytestsource\\", managerId: \\"t1|gql-e2e-v2|9\\"}], on_conflict: {constraint: org_Employee_pkey, update_columns: [managerId, origin]}) { returning { id uid } } }"`;

exports[`groupByAffectedFields noop 1`] = `
Array [
  Array [
    "u0a",
    "u0b",
  ],
  Array [
    "u1a",
    "u1b",
  ],
  Array [
    "u2a",
    "u2b",
  ],
]
`;

exports[`groupByAffectedFields one level 1`] = `
Array [
  Array [
    "u0a",
    "u0b",
  ],
  Array [
    "u1a",
    "u1b",
  ],
  Array [
    "u2a",
    "u2b",
  ],
]
`;

exports[`groupByAffectedFields two levels 1`] = `
Array [
  Array [
    "u0a",
    "u0b",
  ],
  Array [
    "u1a",
  ],
  Array [
    "u1b",
  ],
  Array [
    "u2a",
    "u2b",
  ],
]
`;

exports[`toLevels ignore other models 1`] = `
Array [
  Array [
    "u0",
  ],
  Array [
    "u2",
  ],
]
`;

exports[`toLevels imbalanced tree 1`] = `
Array [
  Array [
    "u0",
    "u3",
  ],
  Array [
    "u1",
  ],
  Array [
    "u2",
  ],
]
`;

exports[`toLevels simple chain 1`] = `
Array [
  Array [
    "u0",
  ],
  Array [
    "u1",
  ],
  Array [
    "u2",
  ],
]
`;

exports[`toLevels simple chain 2`] = `
Array [
  Array [
    "u0",
  ],
  Array [
    "u1",
  ],
]
`;

exports[`toLevels simple chain 3`] = `
Array [
  Array [
    "u0",
  ],
]
`;

exports[`toLevels simple tree 1`] = `
Array [
  Array [
    "u0",
    "u1",
  ],
  Array [
    "u2",
  ],
]
`;
